fix hr width  on mobile

--- a/styles/css/charadex.css
+++ b/styles/css/charadex.css
@@ -680,7 +680,7 @@ hr {
   vertical-align: -0.1em;
   content: "";
   height: 1em;
-  width: 50%;
+  width: 100%;
   padding: 1rem;
   margin: 0;
   border: 0;
